<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint">Enter Amount here...</string>
    <string name="amountHint">Number and decimal only</string>
    <string name="tenPercent">10</string>
    <string name="fifteenPercent">15</string>
    <string name="twentyPercent">20</string>

</resources>
