<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txtTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="87dp"
        android:hint="@string/hello_world"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:typeface="serif" />

    <TextView
        android:id="@+id/txtAmountHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etAmount"
        android:layout_below="@+id/etAmount"
        android:hint="@string/amountHint"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="8sp" />

    <Button
        android:id="@+id/btnTen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtAmountHint"
        android:layout_alignTop="@+id/txtAmountHint"
        android:layout_marginTop="15dp"
        android:text="@string/tenPercent" />

    <Button
        android:id="@+id/btnFifteen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnTen"
        android:layout_alignTop="@+id/btnTen"
        android:layout_toRightOf="@+id/btnTen"
        android:text="@string/fifteenPercent" />

    <Button
        android:id="@+id/btnTwenty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnFifteen"
        android:layout_alignTop="@+id/btnFifteen"
        android:layout_toRightOf="@+id/btnFifteen"
        android:text="@string/twentyPercent" />

</RelativeLayout>
